2007-01-08  Thomas Wood  <thos@gnome.org>

	Patch by: Alberto Ruiz <aruiz@synaptia.net>

	* Makefile.am:
	* gnome-theme-installer.desktop.in.in:
	* gnome-theme-package.xml:
	* gnome-theme-package.xml.in:

	Add support for opening .gtp (application/x-gnome-theme-package) files.
	Fixes bug 393697 (Theme packages should have their own mime type.)

2007-01-08  Thomas Wood  <thos@gnome.org>

	* gtkrc-utils.h: Correct function decleration
	* gnome-theme-details.c: (update_color_scheme_tab), (color_select),
	(toggle_color_scheme_key):
	* theme-properties.glade:

	Add custom colour scheme saving UI

2007-01-07  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* gnome-theme-details.c: (gtk_theme_update_remove_button),
	(remove_theme), (color_select), (toggle_color_scheme_key),
	(gnome_theme_details_init):
	* gnome-theme-manager.c: (main):
	* gtkrc-utils.c:
	* gtkrc-utils.h:
	* theme-properties.glade:

	Enable a message when the current theme does not support colour schemes

2007-01-07  Thomas Wood  <thos@gnome.org>

	Based on patch by: Gabor Kelemen <kelemeng@gnome.hu>

	* gnome-theme-installer.c: (transfer_done_cb): Fixes bug 360449 (Avoid
	markup in translatable messages)

2007-01-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-theme-details.c (gtk_theme_update_remove_button): removed
	double gnome_vfs_file_info_unref/g_free calls.

2007-01-07  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (gtk_theme_update_remove_button): Applied patch
	from bug 326337 (leaks in the theme manager)

2007-01-11  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (gnome_theme_details_init): Applied theme
	manager part of the patch from bug 382730 (fix build with c89 compilers)

2007-01-11  Thomas Wood  <thos@gnome.org>

       * theme-properties.glade: Set minimum size request on the treeview
       rather than the entire window (fixes bug 393236).

2007-01-05  Christian Persch <chpe@gnome.org>

	Fixes #393117
