@@ -1208,7 +1208,7 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkHBox" id="hbox34">
+		<widget class="GtkHBox" id="saved_color_schemes_hbox">
 		  <property name="visible">True</property>
 		  <property name="homogeneous">False</property>
 		  <property name="spacing">6</property>
@@ -1241,7 +1241,7 @@
 		  <child>
 		    <widget class="GtkComboBox" id="color_scheme_combobox">
 		      <property name="visible">True</property>
-		      <property name="items" translatable="yes">Foo
+		      <property name="items" translatable="yes"> 
 Custom</property>
 		      <property name="add_tearoffs">False</property>
 		      <property name="focus_on_click">True</property>
@@ -1254,7 +1254,7 @@ Custom</property>
 		  </child>
 
 		  <child>
-		    <widget class="GtkButton" id="button1">
+		    <widget class="GtkButton" id="save_color_scheme_button">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="label">gtk-save</property>
@@ -1270,7 +1270,7 @@ Custom</property>
 		  </child>
 
 		  <child>
-		    <widget class="GtkButton" id="button2">
+		    <widget class="GtkButton" id="delete_color_scheme_button">
 		      <property name="visible">True</property>
 		      <property name="can_focus">True</property>
 		      <property name="label">gtk-delete</property>
