@@ -1,5 +1,15 @@
 2007-01-08  Thomas Wood  <thos@gnome.org>
 
+	* gnome-theme-details.c: (color_select),
+	(color_scheme_combobox_changed), (gnome_theme_details_init),
+	(update_color_buttons_from_string),
+	(gnome_theme_details_update_from_gconf):
+	* theme-properties.glade:
+
+	Add Save/Delete dialogs for colour schemes.
+
+2007-01-08  Thomas Wood  <thos@gnome.org>
+
 	Patch by: Alberto Ruiz <aruiz@synaptia.net>
 
 	* Makefile.am:
